Fix: Unification nom + refactoring + corrections multiples
- Fix: Unification "Berancan Guven" dans tous les fichiers (au lieu de "Guven Berancan")
- Fix: Clarification version Portfolio V3 (README, robots.txt)
- Fix: Correction encodage UTF-8 dans DashboardController
- Fix: Suppression doublon ADMIN_EMAIL dans .env
- Fix: Correction robots.txt (retrait code PHP, ajout URL hardcodée)

- Refactor: Centralisation fonction generateSlug() dans helpers.php
- Refactor: Utilisation du helper generateSlug() dans 5 fichiers (réduction ~70 lignes)

- Fix: Token CSRF manquant dans suppressions/éditions skills et catégories
- Fix: Suppression double confirmation popup

- Fix: Upload d'images non fonctionnel (boutons customisés non reliés aux inputs)

- Feat: Migration URLs projets de /project/{id} vers /project/{slug} pour SEO
- Feat: Affichage nom du fichier sélectionné lors de l'upload

--- a/src/Views/home.phtml
+++ b/src/Views/home.phtml
@@ -1,7 +1,7 @@
 <section id="home">
   <div class="main-container">
     <div class="image">
-      <img class="imageHome" src="/img/PhotoDeProfilPF2.png" alt="Guven Berancan - Développeur Web Full Stack Junior - Photo de profil professionnelle" class="profile-img" loading="eager">
+      <img class="imageHome" src="/img/PhotoDeProfilPF2.png" alt="Berancan Guven - Développeur Web Full Stack Junior - Photo de profil professionnelle" class="profile-img" loading="eager">
       
     </div>
     <div class="content">
@@ -190,7 +190,7 @@ Je recherche un <strong>stage de 4 mois, du 1er avril au 31 juillet</strong>, af
                   </div>
 
                   <div class="emotions-slider-item__footer">
-                    <a class="emotions-slider-item__btn" href="/project/<?= $project['id'] ?>">
+                    <a class="emotions-slider-item__btn" href="/project/<?= $project['slug'] ?>">
                       <span class="emotions-slider-item__btn-text">Voir le projet</span>
                       <span class="emotions-slider-item__btn-icon">
                         <i class="fas fa-arrow-right"></i>
