--- a/src/Views/layout.phtml
+++ b/src/Views/layout.phtml
@@ -203,7 +203,7 @@
 
 <footer>
   <div class="wave"></div>
-  <h3>Guven Berancan</h3>
+  <h3>Berancan Guven</h3>
   <div class="footer-links">
     <a href="index.php#home">Accueil</a>
     <a href="index.php#parcours">Mon Parcours</a>
