--- a/src/Views/admin-layout.phtml
+++ b/src/Views/admin-layout.phtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
-    <title>Admin - Guven Berancan Portfolio</title>
+    <title>Admin - Berancan Guven Portfolio</title>
     <link rel="stylesheet" href="/css/style.css?v=<?= time() ?>">
     <script>
         // Injecter l'URL admin et le token CSRF pour JavaScript
